# AI-Native-Monorepo-Starter-Kit

./: .coverage  .env.example  .env.template  .gitignore  GEMINI.md  HEXAGONAL_ARCHITECTURE_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  README.md  coverage.xml  example-domains.txt  justfile  justfile.backup  nx.json  observability.yaml  package.json  pnpm-lock.yaml  pyproject.toml  pyproject.toml.backup  pyproject.toml.new  temp_test.py  todo.md  tsconfig.base.json
.github/instructions/: config.instructions.md  database.instructions.md  fastapi.instructions.md  general-rules.instructions.md  instructions-howto.md  nx.instructions.md  react.instructions.md  testing.instructions.md  ui.instructions.md
.github/workflows/: ci.yml
.hypothesis/constants/: 037e69fb0f7dccad  27a26fab5b04cd6e  9e402d49d9cfa18f  ce2475b565b3a8c1  cf2540355850d95a  da39a3ee5e6b4b0d
.hypothesis/examples/04e6b3400353b141/: 2e647bfc0f091a1d  b17b5f5473c21457
.kiro/specs/ai-native-monorepo/: design.md  requirements.md  tasks.md
.kiro/specs/api-testing-framework/: design.md  requirements.md  tasks.md
.kiro/specs/database-integration-testing/: design.md  requirements.md  tasks.md
.kiro/specs/make-to-just-migration/: design.md  requirements.md  tasks.md
.kiro/specs/unit-testing-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/vector-db-e2e-testing/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.make_assets/: setup_helper.sh
apps/CTX=test-orders-svc/src/: main.py
apps/allocation-api/: project.json
apps/allocation-api/src/: main.py
apps/invoicing-api/: project.json
apps/invoicing-api/src/: main.py
apps/payments-api/: project.json
apps/payments-api/src/: main.py
apps/test-orders-svc/src/: main.py
docker/: observability-compose.yml  prometheus.yml
docs/: coverage-improvement-issue.md  custom_instructions_getting_starter.md  enhancement.md  iac_specification_changes.md  mece-driven-domain-generation.md  modular-setup.md  supabase-nx-integration.md  supabase.md  supabase_integration.md  superbase-fix.md  test-coverage-improvement-plan.md  uv-migration.md
docs/.temp/: READMEkernel.md  enhancement.md  migrate_supabase.md  todo.md
docs/.temp/.scratchpad/: codebase_vs_intent_analysis.md  comprehensive-requirements-specification.md  intended-architecture.md  makefile-enhancement-summary.md  observability-plan.md  reversible-microservice-demo.sh  reversible-microservice-summary.md  supabase-vector-integration-plan.md  sys_path_resolution_summary.md  vector-db-implementation-plan.md
libs/allocation/adapters/: allocation_repository_port.py
libs/allocation/application/: allocation_service.py
libs/allocation/domain/: factories.py
libs/analytics/application/: analytics_service.py
libs/inventory/application/: inventory_service.py
libs/invoicing/application/: invoice_service.py
libs/payments/: __init__.py
libs/payments/application/: payment_service.py
libs/payments/domain/: __init__.py
libs/shared-python-tools/: ai_presets.js  env_setup.py  scaffold_ai_stack.js
libs/shared/observability/: config.py  decorators.py  factory.py  local_provider.py  otel_provider.py  provider.py
libs/shared/vector/: README.md  adapter.py  embedding_service.py  pgvector_adapter.py  similarity_search.py  supabase_adapter.py  supabase_rls.sql  (+4 more)
libs/test-orders/: project.json
playwright-report/: index.html
project-definitions/: README.md
scripts/: generate-domains.ps1  generate-domains.sh  generate_domain.py  justfile_helper.py  service_generator.py  setup.py  supabase_cli.py
supabase/: seed.sql
test-results/: .last-run.json
tests/: test_setup.py  test_supabase.py
tests/e2e/: playwright.config.ts  project.json  tsconfig.json  vector-db.spec.ts
tests/unit/: conftest.py  pytest.ini
tools/: generators.json
tools/supa_cli/: main.py
(+47 files in other folders)
