[project]
name = "ai-native-monorepo-starter-kit"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]

[tool.pytest.ini_options]
pythonpath = "."
dotenv_files = [".env"]
addopts = "-p no:warnings"

[tool.setuptools.packages.find]
where = ["libs"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "ruff==0.12.2",
    "mypy==1.16.1",
    "pre-commit==4.2.0",
    "uv==0.7.19",
    "pytest-dotenv==0.5.2"
]
supabase = [
    "supabase==2.16.0",
    "python-dotenv==1.1.1"
]